# StatisticalArbitrage

./: .gitignore  README.md  pyproject.toml
experiments/: cointegration_02.py  experiemnt_02.py  option_data.py
src/: test_agent.py
src/algorithms/: simple_mean_reverse.py
src/backtest/: strategy_backtester.py
src/datautils/: data_handler.py
